--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -33,15 +33,15 @@ LIBS_INCLUDE_LIBWEBSOCKETS=n
 LIBS_INCLUDE_MEDIA=n
 LIBS_INCLUDE_CURL=n
 LIBS_INCLUDE_NCURSES=n
-LIBS_INCLUDE_LIBPCRE=n
-LIBS_INCLUDE_LIBEV=n
-LIBS_INCLUDE_LIBSODIUM=n
+LIBS_INCLUDE_LIBPCRE=y
+LIBS_INCLUDE_LIBEV=y
+LIBS_INCLUDE_LIBSODIUM=y
 LIBS_INCLUDE_LIBUDNS=n
 LIBS_INCLUDE_LIBXML2=n
-LIBS_INCLUDE_MBEDTLS=n
+LIBS_INCLUDE_MBEDTLS=y
 LIBS_INCLUDE_READLINE=n
 LIBS_INCLUDE_LIBRTLSDR=n
-LIBS_INCLUDE_C_ARES=n
+LIBS_INCLUDE_C_ARES=y
 LIBS_INCLUDE_LIBEVENT=n
 LIBS_INCLUDE_BOOST=n
 STORAGE_ENABLED=n
