--- a/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
@@ -526,7 +526,7 @@ CONFIG_NETFILTER_XT_CONNMARK=y
 # Xtables targets
 #
 CONFIG_NETFILTER_XT_TARGET_CHECKSUM=m
-CONFIG_NETFILTER_XT_TARGET_CLASSIFY=m
+# CONFIG_NETFILTER_XT_TARGET_CLASSIFY is not set
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=m
 CONFIG_NETFILTER_XT_TARGET_CT=m
 CONFIG_NETFILTER_XT_TARGET_DSCP=m
@@ -1986,14 +1986,14 @@ CONFIG_MT7603E_WIFI_BASIC_FUNC=y
 # CONFIG_MT7603E_WSC_V2_SUPPORT is not set
 # CONFIG_MT7603E_WSC_NFC_SUPPORT is not set
 CONFIG_MT7603E_DOT11N_DRAFT3=y
-# CONFIG_MT7603E_DOT11W_PMF_SUPPORT is not set
+CONFIG_MT7603E_DOT11W_PMF_SUPPORT=y
 CONFIG_MT7603E_LLTD_SUPPORT=y
 # CONFIG_MT7603E_QOS_DLS_SUPPORT is not set
 # CONFIG_MT7603E_WAPI_SUPPORT is not set
 # CONFIG_MT7603E_CARRIER_DETECTION_SUPPORT is not set
 CONFIG_MT7603E_IGMP_SNOOP_SUPPORT=y
 # CONFIG_MT7603E_BLOCK_NET_IF is not set
-# CONFIG_MT7603E_DMA_CACHE_OPTIMIZE is not set
+CONFIG_MT7603E_DMA_CACHE_OPTIMIZE=y
 CONFIG_MT7603E_RATE_ADAPTION=y
 CONFIG_MT7603E_NEW_RATE_ADAPT_SUPPORT=y
 # CONFIG_MT7603E_AGS_SUPPORT is not set
@@ -2017,7 +2017,7 @@ CONFIG_MT7603E_LED_CONTROL_SUPPORT=y
 CONFIG_MT7603E_RT2860V2_AP_V24_DATA_STRUCTURE=y
 # CONFIG_MT7603E_MEMORY_OPTIMIZATION is not set
 # CONFIG_MT7603E_HOTSPOT is not set
-# CONFIG_MT7603E_UAPSD is not set
+CONFIG_MT7603E_UAPSD=y
 # CONFIG_MT7603E_RLT_MAC is not set
 # CONFIG_MT7603E_RTMP_MAC is not set
 CONFIG_MT7603E_RTMP_PCI_SUPPORT=y
@@ -2049,7 +2049,7 @@ CONFIG_MT7603E_MAC_REPEATER_SUPPORT=y
 # CONFIG_MT7603E_COC_SUPPORT is not set
 # CONFIG_MT7603E_MCAST_RATE_SPECIFIC is not set
 # CONFIG_MT7603E_PREVENT_ARP_SPOOFING_SUPPORT is not set
-# CONFIG_MT7603E_SECURITY_IMPROVEMENT_SUPPORT is not set
+CONFIG_MT7603E_SECURITY_IMPROVEMENT_SUPPORT=y
 # CONFIG_MT7603E_WPA3_SUPPORT is not set
 # CONFIG_MT7603E_OWE_SUPPORT is not set
 CONFIG_MT7603E_NEW_BW2040_COEXIST_SUPPORT=y
@@ -2110,9 +2110,8 @@ CONFIG_RA_HW_NAT_FIN_DLTA=5
 CONFIG_RA_HW_NAT_NTU_DLTA=5
 # CONFIG_RA_HW_NAT_PREBIND is not set
 CONFIG_RA_HW_NAT_IPV6=y
-# CONFIG_RA_HW_NAT_QDMA is not set
-# CONFIG_RA_HW_NAT_MCAST is not set
-# CONFIG_RA_HW_NAT_PCI is not set
+CONFIG_RA_HW_NAT_QDMA=y
+CONFIG_RA_HW_NAT_PCI=y
 CONFIG_RA_HW_NAT_WIFI=y
 # CONFIG_RA_HW_NAT_DEBUG is not set
 
