--- a/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
@@ -1960,7 +1960,7 @@ CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE=y
 CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_APCLI_CERT is not set
 # CONFIG_MT76X2_AP_APCLI_AUTO_BW is not set
-# CONFIG_MT76X2_AP_MAC_REPEATER is not set
+CONFIG_MT76X2_AP_MAC_REPEATER=y
 # CONFIG_MT76X2_AP_MWDS is not set
 # CONFIG_MT76X2_AP_SMART_MESH is not set
 # CONFIG_MT76X2_AP_AIRPLAY is not set
@@ -2009,7 +2009,7 @@ CONFIG_MT7603E_RTMP_FLASH_SUPPORT=y
 # CONFIG_MT7603E_AIR_MONITOR_SUPPORT is not set
 # CONFIG_MT7603E_STA_FORCE_ROAM_SUPPORT is not set
 # CONFIG_MT7603E_ROAMING_ENHANCE_SUPPORT is not set
-# CONFIG_MT7603E_WIFI_FWD_UPDATED is not set
+CONFIG_MT7603E_WIFI_FWD_UPDATED=y
 # CONFIG_MT_BTCOEX_CONCURRENT is not set
 CONFIG_MT7603E_LED_CONTROL_SUPPORT=y
 # CONFIG_MT7603E_SINGLE_SKU_V2 is not set
@@ -2065,7 +2065,7 @@ CONFIG_RT_MAX_CLIENTS=48
 # CONFIG_RT_DOT11R_FT is not set
 # CONFIG_RT_DOT11K_RRM is not set
 CONFIG_RT_80211N_DRAFT3=y
-# CONFIG_RT_80211W_PMF is not set
+CONFIG_RT_80211W_PMF=y
 # CONFIG_RT_WSC is not set
 # CONFIG_RT_ED_MONITOR is not set
 CONFIG_RT_IGMP_SNOOP=y
