add txbf for mt76x2

--- a/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
@@ -1969,7 +1969,7 @@ CONFIG_MT76X2_AP_MAC_REPEATER=y
 # CONFIG_MT76X2_AP_IDS is not set
 # CONFIG_MT76X2_AP_DLS is not set
 CONFIG_MT76X2_AP_80211AC_VHT=y
-# CONFIG_MT76X2_AP_TXBF_SUPPORT is not set
+CONFIG_MT76X2_AP_TXBF_SUPPORT=y
 
 #
 # AP MODE MediaTek MT7603E PCIe Wireless driver
