--- a/trunk/linux-3.4.x/drivers/net/rt_eip/Makefile
+++ b/trunk/linux-3.4.x/drivers/net/rt_eip/Makefile
@@ -1,5 +1,4 @@
 
 ifneq ($(CONFIG_RALINK_HWCRYPTO),)
-obj-$(CONFIG_RALINK_HWCRYPTO) += crypto_k.o
-crypto_k-objs := crypto_k.obj
+obj-$(CONFIG_RALINK_HWCRYPTO) += cryptoDriver/
 endif
