--- a/trunk/linux-3.4.x/drivers/net/rt_eip/Kconfig
+++ b/trunk/linux-3.4.x/drivers/net/rt_eip/Kconfig
@@ -2,13 +2,13 @@ config RALINK_HWCRYPTO
 	depends on (XFRM && INET_ESP)
 	depends on (RALINK_MT7621)
 	tristate "EIP93 IPsec HW Crypto Engine"
-	default n
+	default y
 
 config RALINK_HWCRYPTO_ESP6
 	depends on RALINK_HWCRYPTO
 	depends on IPV6
 	bool "Offload ESP6 via Crypto Engine"
-	default n
+	default y
 
 config RALINK_HWCRYPTO_DEBUG
 	depends on RALINK_HWCRYPTO
