ipsec web support and related conf, firewall

--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -76,7 +76,7 @@ clean:
 
 romfs:
 	$(ROMFSINST) /sbin/$(EXEC)
-	cd $(INSTALLDIR) && rm -f init && ln -sf sbin/rc init
+	cd $(INSTALLDIR)/sbin && rm -f init && ln -sf sbin/rc init
 	cd $(INSTALLDIR)/sbin && ln -sf rc init
 	cd $(INSTALLDIR)/sbin && ln -sf rc watchdog
 	cd $(INSTALLDIR)/sbin && ln -sf rc hotplug
