--- a/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
@@ -2018,6 +2018,7 @@ CONFIG_MT76X2_AP_APCLI=y
 CONFIG_MT76X2_AP_MAC_REPEATER=y
 # CONFIG_MT76X2_AP_MWDS is not set
 # CONFIG_MT76X2_AP_SMART_MESH is not set
+# CONFIG_MT76X2_AP_CON_WPS is not set
 # CONFIG_MT76X2_AP_AIRPLAY is not set
 # CONFIG_MT76X2_AP_DFS is not set
 # CONFIG_MT76X2_AP_CARRIER is not set
@@ -2121,7 +2122,9 @@ CONFIG_RT_MAX_CLIENTS=48
 # CONFIG_RT_DOT11K_RRM is not set
 CONFIG_RT_80211N_DRAFT3=y
 CONFIG_RT_80211W_PMF=y
-# CONFIG_RT_WSC is not set
+CONFIG_RT_WSC=y
+CONFIG_RT_WSC_V2=y
+# CONFIG_RT_WSC_NFC is not set
 # CONFIG_RT_ED_MONITOR is not set
 CONFIG_RT_IGMP_SNOOP=y
 # CONFIG_RT_MCAST_RATE_SPECIFIC is not set
