--- a/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
@@ -147,7 +147,7 @@ CONFIG_MIPS_GIC_IPI=y
 CONFIG_CPU_MIPSR2_IRQ_VI=y
 CONFIG_CPU_MIPSR2_IRQ_EI=y
 CONFIG_CPU_HAS_SYNC=y
-# CONFIG_LONG_CALLS is not set
+CONFIG_LONG_CALLS=y
 # CONFIG_HIGHMEM is not set
 CONFIG_CPU_SUPPORTS_HIGHMEM=y
 CONFIG_SYS_SUPPORTS_HIGHMEM=y
@@ -2006,7 +2006,7 @@ CONFIG_RT_THIRD_CARD=0
 #
 # AP MODE MediaTek MT7620/MT7602E/MT7612E RBUS/PCIe Wireless driver
 #
-CONFIG_MT76X2_AP=m
+CONFIG_MT76X2_AP=y
 CONFIG_MT76X2_AP_LED=y
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
@@ -2038,8 +2038,8 @@ CONFIG_MT7603E_RLT_WIFI=m
 #
 CONFIG_MT7603E_MULTI_INF_SUPPORT=y
 CONFIG_MT7603E_WIFI_BASIC_FUNC=y
-# CONFIG_MT7603E_WSC_INCLUDED is not set
-# CONFIG_MT7603E_WSC_V2_SUPPORT is not set
+CONFIG_MT7603E_WSC_INCLUDED=y
+CONFIG_MT7603E_WSC_V2_SUPPORT=y
 # CONFIG_MT7603E_WSC_NFC_SUPPORT is not set
 CONFIG_MT7603E_DOT11N_DRAFT3=y
 CONFIG_MT7603E_DOT11W_PMF_SUPPORT=y
@@ -2106,8 +2106,8 @@ CONFIG_MT7603E_MAC_REPEATER_SUPPORT=y
 # CONFIG_MT7603E_MCAST_RATE_SPECIFIC is not set
 # CONFIG_MT7603E_PREVENT_ARP_SPOOFING_SUPPORT is not set
 CONFIG_MT7603E_SECURITY_IMPROVEMENT_SUPPORT=y
-# CONFIG_MT7603E_WPA3_SUPPORT is not set
-# CONFIG_MT7603E_OWE_SUPPORT is not set
+CONFIG_MT7603E_WPA3_SUPPORT=y
+CONFIG_MT7603E_OWE_SUPPORT=y
 CONFIG_MT7603E_NEW_BW2040_COEXIST_SUPPORT=y
 CONFIG_MT7603E_RALINK_MT7603E=y
 CONFIG_MT7603E_MT_MAC=y
