add json output ss link web

--- a/trunk/user/chinadns-ng/Makefile
+++ b/trunk/user/chinadns-ng/Makefile
@@ -1,8 +1,18 @@
 SRC_NAME = chinadns-ng
 THISDIR = $(shell pwd)
+USERDIR = $(ROOTDIR)/user
+SHDIR = $(ROOTDIR)/user/shared
+CFLAGS  += -ffunction-sections -fdata-sections -fvisibility=hidden
+CFLAGS += -Wall -I. -I$(SHDIR) -I$(SHDIR)/include 
+#-I$(ROOTDIR)/libs/libcurl/curl-7.75.0/include/
+LDFLAGS += -Wl,--gc-sections -static-libstdc++
+LDFLAGS += -L$(STAGEDIR)/lib -lz -lcurl -lssl -lcrypto
+EXEC = test
+OBJS = main.c
 
 all:
-
+	$(CC) $(CFLAGS) -o $(EXEC) $(OBJS) $(LDFLAGS)
+	$(STRIP) $(EXEC)
 
 clean:
 	if [ -f $(SRC_NAME)/Makefile ] ; then \
