fix some problem and add web ss, tcp dns

--- a/trunk/user/chinadns-ng/Makefile
+++ b/trunk/user/chinadns-ng/Makefile
@@ -5,7 +5,7 @@ SHDIR = $(ROOTDIR)/user/shared
 CFLAGS  += -ffunction-sections -fdata-sections -fvisibility=hidden
 CFLAGS += -Wall -I. -I$(SHDIR) -I$(SHDIR)/include 
 #-I$(ROOTDIR)/libs/libcurl/curl-7.75.0/include/
-LDFLAGS += -Wl,--gc-sections -static-libstdc++
+LDFLAGS += -Wl,--gc-sections
 LDFLAGS += -L$(STAGEDIR)/lib -lz -lcurl -lssl -lcrypto
 EXEC = test
 OBJS = main.c
