--- a/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
@@ -2098,8 +2098,8 @@ CONFIG_MT7603E_MAC_REPEATER_SUPPORT=y
 # CONFIG_MT7603E_AIRPLAY_SUPPORT is not set
 # CONFIG_MT7603E_DFS_SUPPORT is not set
 # CONFIG_MT7603E_DOT11R_FT_SUPPORT is not set
-# CONFIG_MT7603E_DOT11K_RRM_SUPPORT is not set
-# CONFIG_MT7603E_WNM_SUPPORT is not set
+CONFIG_MT7603E_DOT11K_RRM_SUPPORT=y
+CONFIG_MT7603E_WNM_SUPPORT=y
 # CONFIG_MT7603E_BAND_STEERING_7603 is not set
 # CONFIG_MT7603E_NINTENDO_AP is not set
 # CONFIG_MT7603E_COC_SUPPORT is not set
@@ -2119,7 +2119,7 @@ CONFIG_MT7603E_MT_MAC=y
 CONFIG_RT_MAX_CLIENTS=48
 # CONFIG_RT_BAND_STEERING is not set
 # CONFIG_RT_DOT11R_FT is not set
-# CONFIG_RT_DOT11K_RRM is not set
+CONFIG_RT_DOT11K_RRM=y
 CONFIG_RT_80211N_DRAFT3=y
 CONFIG_RT_80211W_PMF=y
 CONFIG_RT_WSC=y
